test/parsing/vass/wrong-unended-string-2.good
wrong-unended-string-2.chpl:2: error: end-of-file in string literal
